# datamole-assignment

./: Dockerfile  README.md  c4-system-context.drawio  dev_logger.yml  pyproject.toml
datamole_assignment/: api.py  main.py  service.py  setup.py
