[project]
name = "datamole-assignment"
version = "0.0.1"
requires-python = ">=3.10"

description = "Python web service for monitoring activities on github"
authors = [{name = "Norbert Dopjera",email = "ndopjera@gmail.com"}]
readme = "README.md"

dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
